[NguyenDanHuy_26.05.2025] feat: add endpoint to retrieve child services by parent service ID and update service model to include parent_service_id
